@@ -6,6 +6,8 @@ TCL_VER := 8.5
 endif
 MAJOR_VER := 9.6
 
+CATVERSION = $(shell awk '/CATALOG_VERSION_NO/ { print $$3 }' src/include/catalog/catversion.h)
+
 DEB_BUILD_ARCH = $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 # this must also work for old releases with multiarch, so don't fail if the
@@ -180,6 +182,9 @@ endif
 		install src/tutorial/*.c src/tutorial/*.source src/tutorial/Makefile src/tutorial/README debian/postgresql-doc-$(MAJOR_VER)/usr/share/doc/postgresql-doc-$(MAJOR_VER)/tutorial; \
 	fi
 
+	# record catversion in a file
+	echo $(CATVERSION) > debian/postgresql-$(MAJOR_VER)/usr/share/postgresql/$(MAJOR_VER)/catalog_version
+
 override_dh_auto_test:
 ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	# when tests fail, print all regression.diffs files, as well as the newest log files
@@ -197,6 +202,8 @@ override_dh_strip:
 	dh_strip --dbg-package=postgresql-$(MAJOR_VER)-dbg
 
 ifneq ($(DEB_HOST_MULTIARCH),)
-override_dh_gencontrol:
-	dh_gencontrol -- -Vmisc:Multi-Arch=same
+GENCONTROL_MA = -Vmisc:Multi-Arch=same
 endif
+override_dh_gencontrol:
+	# record catversion in .deb control file
+	dh_gencontrol -- $(GENCONTROL_MA) -Vpostgresql:Catversion=$(CATVERSION)
